--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -19,5 +19,7 @@ jobs:
       with:
         node-version: 12.18.x
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm run typecheck
+    - run: npm run lint
+    - run: npm run build
     - run: npm test
